src/tests/Advanced/ShouldFail/false_or_list.ml
let b = false || true :: [] in
if l then prInt 1 else prInt 0
